@@ -75,10 +75,6 @@ func segmentStorageFactory() storage.SegmentStorageFactory {
 	return storage.SegmentStorageMainFactory{}
 }
 
-func trafficTypeStorageFactory() storage.TrafficTypeStorage {
-	return redis.NewTrafficTypeStorageAdapter(redis.Client, conf.Data.Redis.Prefix)
-}
-
 func startLoop(loopTime int64) {
 	for {
 		time.Sleep(time.Duration(loopTime) * time.Millisecond)
@@ -100,8 +96,6 @@ func Start(sigs chan os.Signal, gracefulShutdownWaitingGroup *sync.WaitGroup) {
 	segmentFetcher := segmentFetcherFactory()
 	segmentStorage := segmentStorageFactory()
 
-	trafficTypeStorage := trafficTypeStorageFactory()
-
 	// WebAdmin configuration
 	waOptions := &admin.WebAdminOptions{
 		Port:          conf.Data.Producer.Admin.Port,
@@ -112,7 +106,7 @@ func Start(sigs chan os.Signal, gracefulShutdownWaitingGroup *sync.WaitGroup) {
 	// Run WebAdmin Server
 	admin.StartAdminWebAdmin(waOptions, splitStorage, segmentStorage.NewInstance())
 
-	go task.FetchSplits(splitFetcher, splitStorage, conf.Data.SplitsFetchRate, gracefulShutdownWaitingGroup, trafficTypeStorage)
+	go task.FetchSplits(splitFetcher, splitStorage, conf.Data.SplitsFetchRate, gracefulShutdownWaitingGroup)
 
 	go task.FetchSegments(segmentFetcher, segmentStorage, conf.Data.SegmentFetchRate, gracefulShutdownWaitingGroup)
 
