@@ -35,7 +35,7 @@ const _eventsListNamespace = "SPLITIO.events"
 const _impressionsQueueNamespace = "SPLITIO.impressions"
 
 //TrafficTypeNames
-const _trafficTypeNamespace = "SPLITIO.trafficType"
+const _trafficTypeNamespace = "SPLITIO.trafficType.%s"
 
 type prefixAdapter struct {
 	prefix string
@@ -92,6 +92,6 @@ func (p prefixAdapter) impressionsQueueNamespace() string {
 	return fmt.Sprint(p.setPrefixPattern(_impressionsQueueNamespace))
 }
 
-func (p prefixAdapter) trafficTypeNamespace() string {
-	return fmt.Sprintf(p.setPrefixPattern(_trafficTypeNamespace))
+func (p prefixAdapter) trafficTypeNamespace(name string) string {
+	return fmt.Sprintf(p.setPrefixPattern(_trafficTypeNamespace), name)
 }
