@@ -5,6 +5,7 @@
  - Added label in Sync Dashboard to indicate on which mode it started (Synchronizer or Proxy).
  - Added task to check Sync environtment and added healthySince property to healtheck endpoint.
  - Added healthcheck into Sync Dashboard.
+ - Fixed counter for trafficTypes when a particular split is updated.
 2.3.0 (May 30, 2019)
  - Added support for track properties
  - Added cache overlay on top of redis for fetching events
